# crowd-vision

./: .dockerignore  .gitignore  .mise.toml  .prettierignore  .releaserc  .trivyignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Caddyfile  Justfile  LICENSE  MODEL_EDITOR_PLAN.md  README.md  SPEC.md  admin-creator.js  badge.json  build-application.sh  docker-compose.client.yml  docker-compose.dbs.yml  docker-compose.dev.yml  docker-compose.integration.yml  docker-compose.interfaces.yml  docker-compose.override.yaml  docker-compose.services.yml  docker-compose.simulators.yml  docker-compose.yml  index.html  lerna.json  mac-build.sh  mkdocs.dev.yml  mkdocs.user.yml  mkdocs.yml  package-lock.json  package.json  prometheus.rules.yml  prometheus.yml  release-please-config.json  renovate.json  scratch_out.txt  (+4 more)
server/agent-service/: .dockerignore  ADDING_TOOLS.md  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  futurework.md  moon.yml  openapi.json  openapi.yaml  package-lock.json  package.json  pyproject.toml  summary.md  tool_creation.md  tools.md  tsconfig.json
server/agent-service/alembic/: env.py
server/agent-service/alembic/versions/: 0001_init.py
server/agent-service/app/: auth.py  cedar_authz.py  citations.py  config.py  db.py  gateway_jwks.py  logging.py  main.py  roles.py  tracing.py
server/agent-service/app/agent/: loop.py  prompts.py
server/agent-service/app/agent/llm/: __init__.py  base.py  deepseek.py  gemini.py  openai_compat.py  pricing.py
server/agent-service/app/agent/tools/: __init__.py  access.py  base.py  downstream.py  registry.py  twin.py  (+2 more)
server/agent-service/app/chunking/: __init__.py  markdown.py  models.py
server/agent-service/app/embeddings/: __init__.py  base.py  gemini.py  openai.py
server/agent-service/app/models/: api.py
server/agent-service/app/retrieval/: __init__.py  keyword.py  pipeline.py  vector.py
server/agent-service/app/routes/: ask.py  health.py  ingest.py
server/agent-service/app/services/: ingest.py
server/agent-service/evals/: README.md  dataset.json  dataset.jsonl  run_evals.py
server/agent-service/scripts/: export_openapi.py  verify_provider.py
server/agent-service/src/: agents.ts
server/agent-service/src/routes/: general.ts  ping.spec.ts  ping.ts
server/agent-service/src/schemas/: llm.schema.ts  ping.schema.ts
server/agent-service/tests/integration/: conftest.py  test_ingest_and_ask.py
server/agent-service/tests/unit/: conftest.py  test_agent_loop_history.py  test_agent_tools.py  test_ask_model_gate_api.py  test_auth.py  test_cedar_conformance.py  test_chunking.py  test_citations.py  test_config.py  test_eval_auth.py  test_eval_status.py  test_history.py  test_ingest_admin_gate_api.py  test_model_override.py  test_prompts.py  test_ranking.py  test_sensor_tool.py  test_tracing.py  test_twin_tool_auth.py
server/contracts-service/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.dev.yml  docker-compose.yml  moon.yml
server/contracts-service/src/: api.rs  db.rs  discovery.rs  infra.rs  main.rs  metrics.rs  models.rs  state.rs  tunnel.rs
server/contracts-service/src/api/: dashboard.rs  data.rs  init.rs
server/contracts-service/src/infra/: claims.rs  db.rs  discovery.rs  metrics.rs
server/twin-service/: Cargo.toml  Dockerfile  docker-compose.dev.yml  docker-compose.yml  moon.yml  openapi.yaml  package-lock.json  package.json  tsconfig.json
server/twin-service/__tests__/: authentication.test.ts  branches.test.ts  building.test.ts  cedarConformance.test.ts  gatewayJwks.test.ts  globalSetup.cjs  globalTeardown.cjs  names.test.ts  sensors.test.ts  setup.ts  tenantScope.test.ts  twin.test.ts
server/twin-service/src/: index.ts  infra.rs  lib.rs  main.rs  models.rs  router.ts  state.rs
server/twin-service/src/api/: buildings.rs
server/twin-service/src/config/: config.ts  gatewayJwks.ts
server/twin-service/src/controller/: buildings.ts  twinController.ts
server/twin-service/src/infra/: authz.rs  claims.rs  db.rs  metrics.rs  outbound.rs  ratelimit.rs
server/twin-service/src/middlewares/: authentication.ts  errors.ts  metrics.ts
server/twin-service/src/models/: building.ts  metrics.ts  twin.ts
server/twin-service/src/services/: buildings.ts  cedarAuthz.ts  contractsService.ts  names.ts  sensors.ts  tenantScope.ts  twinService.ts
server/twin-service/tests/: cedar_conformance.rs  http.rs
(+1336 files in other folders)
