[project]
name = "agent-service"
version = "2.10.1"
description = "RAG-based Q&A agent for crowd-vision"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.14.2",
    "pydantic-ai>=1.99.0",
    "openai>=1.54.0",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2",
    "sqlalchemy[asyncio]>=2.0.35",
    "pgvector>=0.3.6",
    "alembic>=1.14.0",
    "pyjwt[crypto]>=2.9.0",
    "structlog>=24.4.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-httpx>=0.49b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
    "tiktoken>=0.8.0",
    "markdown-it-py>=3.0.0",
    "httpx>=0.27.0",
    "numpy>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "testcontainers[postgres]>=4.8.0",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
    "httpx>=0.27.0",
]

[tool.uv]
constraint-dependencies = [
    "idna>=3.15",
    "mako>=1.3.12",
    "python-multipart>=0.0.31",
    "starlette>=1.3.1",
    "urllib3>=2.7.0",
    "aiohttp>=3.14.1",
    "cryptography>=48.0.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=xml --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions", "**/__pycache__"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "N",     # pep8-naming
    "S",     # flake8-bandit (security)
    "ASYNC", # flake8-async
    "SIM",   # flake8-simplify
    "PTH",   # flake8-use-pathlib
    "TID",   # flake8-tidy-imports
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
    "C4",    # flake8-comprehensions
    "PIE",   # flake8-pie
    "RET",   # flake8-return
]
ignore = [
    "E501", # line too long (formatter handles it)
    "B008", # function calls in defaults (FastAPI Depends)
    "S101", # assert (fine in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]
"evals/**" = ["S"]
"alembic/**" = ["N"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["app", "tests"]
exclude = ["**/__pycache__", "alembic/versions", ".venv"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = "error"
reportMissingTypeStubs = "none"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
